<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="16dp"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/ic_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/fit_icon"
            android:contentDescription="@string/iv_icon"
            android:id="@+id/imgIcon"
            android:paddingVertical="0dp"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:id="@+id/realtive_id1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgIcon"
            android:background="@drawable/register_background"
            android:padding="10dp">


            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvName"
                android:background="@drawable/bg_edittext_icon"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:labelFor="@+id/tvName" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:text="@string/tv_lastName"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etlastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLastName"
                android:background="@drawable/bg_edittext_icon"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etlastName"
                android:text="@string/tv_email"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmail"
                android:background="@drawable/bg_edittext_icon"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:labelFor="@+id/tvEmail" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:text="@string/tv_password"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPassword"
                android:background="@drawable/bg_edittext_icon"

                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:text="@string/tv_gender"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGender"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />

            </RadioGroup>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioSex"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_background"

                android:text="@string/btn_register"
                android:textSize="22sp"></Button>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>