<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/tvWeek"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/tv_week"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etWeek"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWeek"
        android:background="@drawable/bg_edittext_icon"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textSize="22sp"></EditText>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:text="@string/tv_weight"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWeight"
        android:background="@drawable/bg_edittext_icon"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textSize="22sp"></EditText>
</LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_submit"
        android:textSize="22sp"
        android:layout_margin="10dp"></Button>

</LinearLayout>